1.90.7:

2011-10-26  Murray Cumming  <murrayc@murrayc.com>

	examples, tests: Adapt the init() calls.

	* examples/coordinates/main.cc:
	* examples/custom_item/main.cc:
	* examples/demo/main.cc:
	* examples/drag_to_canvas/main.cc:
	* examples/moving_shapes/main.cc:
	* examples/simple/main.cc:
	* examples/table/main.cc:
	* examples/tablemodel/main.cc:
	* examples/text/main.cc:
	* tests/child_properties/main.cc: Remove the extra parameters.

2011-10-26  Murray Cumming  <murrayc@murrayc.com>

	init(): Remove the parameters.

	* goocanvas/goocanvasmm/init.[h|cc]: Remove the (unused) parameters from 
	init().

2011-10-26  Murray Cumming  <murrayc@murrayc.com>

	Fix the --enable-warnings=fatal build.

	* goocanvas/goocanvasmm/init.cc:  Do not include glibmm.h. It is not necessary.

2011-10-25  Murray Cumming  <murrayc@murrayc.com>

	init.h: Move the glibmm.h include to the .cc file.

	* goocanvas/goocanvasmm/init.[h|cc]: The glibmm.h include does not need to be in 
	the header.

2011-10-25  Murray Cumming  <murrayc@murrayc.com>

	Add #includes needed with the latest glibmm.

	* goocanvas/src/bounds.hg:
	* goocanvas/src/enums.hg:
	* goocanvas/src/item.hg:
	* goocanvas/src/itemmodel.hg:  Add individual includes now that gmmproc does not 
	add #include glibmm.h at the top of every generated header.

1.90.6:

2011-09-26  Murray Cumming  <murrayc@murrayc.com>

	Added Gdk::RGBA properties.

	* goocanvas/src/libgoocanvas_methods.defs: Regenerated with h2defs.py.
	* goocanvas/src/libgoocanvas_signals.defs: Regenerated with extra_defs.
	* goocanvas/src/canvas.hg: Added the background-color-gdk-rgba property.
	* goocanvas/src/grid.hg: Added the horz-grid-line-color-gdk-rgba, 
	vert-grid-line-color-gdk-rgba, and border-color-gdk-rgba lines.
	* goocanvas/src/itemsimple.hg: Added the stroke-color-gdk-rgba property and 
	fixed the type of the *-pixbuf properties.
	
2011-09-21  Krzesimir Nowak  <qdlacz@gmail.com>

	Search for gtkmm-3.0 tag file, not gtkmm-2.4.
