@@ -34,4 +34,10 @@ void init()
   wrap_init(); //Tells the Glib::wrap() table about the libgnomecanvasmm classes.
 }
 
+void init(const Glib::ustring& /* app_id */, const Glib::ustring& /* version */, int /* nargs */, gchar * /* args */[])
+{
+  Glib::init(); //Sets up the g type system and the Glib::wrap() table.
+  wrap_init(); //Tells the Glib::wrap() table about the libgnomecanvasmm classes.
+}
+
 } //namespace Goocanvas
